<resources>
    <string name="app_name">User Github</string>
    <string name="username">Username </string>
    <string name="name">Name</string>
    <string name="location">Location : </string>
    <string name="company">Company : </string>
    <string name="followers">Followers : </string>
    <string name="followings">Following : </string>
    <string name="repository">Repository: </string>
    <string name="photo">Photo</string>
    <string name="change_langauage">Change Language</string>

    <string name="follower">Followers</string>
    <string name="followers_url">followers</string>
    <string name="following_url">following</string>
    <string name="following">Following</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="favorite_menu">Favorite</string>
    <string name="delet_favorite">Delete Favorite</string>
    <string name="add_favorite">Add Favorite</string>
    <string name="empty_favorite">Empty Favorite</string>
    <string name="info_favorite">Favorite Info</string>
    <string name="loading_data">Loading Data</string>
    <string name="favored_user">Favored User</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="daily_reminder">Daily Reminder</string>
</resources>