<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|always" />
    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/favorite_menu"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_change_language"
        android:title="@string/change_langauage"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_set_reminder"
        android:title="@string/set_reminder"
        app:showAsAction="never"/>
</menu>