<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="6dp"
    android:layout_marginBottom="6dp"
    android:layout_marginEnd="6dp"
    android:layout_marginStart="6dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp"
    android:background="@color/nude_light">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tv_list_favorite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="@color/nude_light">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_photo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_item_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/username"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/img_photo"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/name"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/tv_item_username"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_username" />


        <TextView
            android:id="@+id/tv_item_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/location"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/tv_item_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_name" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>