<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginRight="16dp"
    android:layout_marginLeft="16dp"
    tools:context=".DetailActivity"
    android:background="@color/nude_dark">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/detail_photo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        app:civ_border_color="#FF909090"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/detail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/detail_photo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/name"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_photo" />

    <TextView
        android:id="@+id/detail_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/detail_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/username"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/detail_photo"
        app:layout_constraintStart_toStartOf="@+id/detail_photo"
        app:layout_constraintTop_toBottomOf="@+id/detail_name" />

    <TextView
        android:id="@+id/detail_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/detail_username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/location"
        app:layout_constraintEnd_toEndOf="@+id/detail_photo"
        app:layout_constraintStart_toStartOf="@+id/detail_photo"
        app:layout_constraintTop_toBottomOf="@+id/detail_username" />

    <TextView
        android:id="@+id/detail_repository"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/detail_location"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/location"
        app:layout_constraintEnd_toEndOf="@+id/detail_photo"
        app:layout_constraintStart_toStartOf="@+id/detail_photo"
        app:layout_constraintTop_toBottomOf="@+id/detail_location" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:minHeight="?actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_repository"
        app:tabIndicatorFullWidth="false"
        app:tabIndicatorHeight="2dp"
        android:background="@color/nude_dark"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tab" />

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_baseline_favorite_border_24"
        app:layout_anchorGravity="bottom|right|end"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>